--- a/pom.xml
+++ b/pom.xml
@@ -5,53 +5,46 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.talentTEK</groupId>
-  <artifactId>CBDD_sp8</artifactId>
+  <artifactId>CBDDFW_JAN_2023</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>CBDD_sp8</name>
+  <name>CBDDFW_JAN_2023</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
-
+    <!-- Selenium and Cucumber -->
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.1.1</version>
+      <version>4.8.1</version>
     </dependency>
-
-
-
-
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-java</artifactId>
-      <version>6.10.0</version>
+      <version>7.11.0</version>
     </dependency>
-
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-testng</artifactId>
-      <version>6.10.0</version>
+      <version>7.11.0</version>
     </dependency>
-
-    <dependency>
-      <groupId>io.github.bonigarcia</groupId>
-      <artifactId>webdrivermanager</artifactId>
-      <version>5.0.3</version>
-    </dependency>
-
+    <!-- Fake Test Data -->
     <dependency>
       <groupId>com.github.javafaker</groupId>
       <artifactId>javafaker</artifactId>
       <version>1.0.2</version>
     </dependency>
-
-
+    <!-- Chrome WebSocket Issue -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-http-jdk-client</artifactId>
+      <version>4.8.1</version>
+    </dependency>
 
   </dependencies>
 
@@ -60,7 +53,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.11.0</version>
         <configuration>
           <source>8</source>
           <target>8</target>
@@ -69,7 +62,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.0.0-M6</version>
         <configuration>
           <testFailureIgnore>true</testFailureIgnore>
           <parallel>methods</parallel>
@@ -79,7 +72,7 @@
       <plugin>
         <groupId>net.masterthought</groupId>
         <artifactId>maven-cucumber-reporting</artifactId>
-        <version>2.8.0</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <id>execution</id>
@@ -88,7 +81,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <projectName>CBDD_sp8</projectName>
+              <projectName>CBDDFW_JAN_2023</projectName>
               <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
             </configuration>
           </execution>
